# projektinator

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  Procfile  README.md  app.py  database_structure.sql  dev.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  drop_tables.sql  example.env  example.prod.env  install.py  pyproject.toml  queries.py  requirements.txt  routes.py  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  main.yml
src/: app.py  db.py  queries.py  routes.py
src/entities/: comment.py  feature.py  project.py  task.py  team.py  user.py
src/repositories/: comment_repository.py  feature_repository.py  project_repository.py  role_repository.py  statistics_repository.py  status_repository.py  task_repository.py  team_repository.py  type_repository.py  user_repository.py
src/routes/: base.py  comments.py  features.py  projects.py  tasks.py  teams.py  users.py
src/services/: comment_service.py  feature_service.py  project_service.py  role_service.py  statistics_service.py  status_service.py  task_service.py  team_service.py  type_service.py  user_service.py
src/static/: notification.js  style.css
src/templates/: footer.html  index.html  layout.html  login.html  navigation.html  projects.html  (+3 more)
static/: notification.js
templates/: index.html  layout.html  login.html  project_info.html  projects.html  projects_new.html  settings_users.html  settings_users_modify.html  settings_users_register.html
utils/: config.py
(+47 files in other folders)
