[tool.poetry]
name = "Projektinator"
version = "0.1.0"
description = "Course project for Tietokantasovellus-course."
authors = ["Tuomas Alanen <tualanen@cs.helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"
python-dotenv = "^0.17.1"
bcrypt = "^3.2.0"
markdown2 = "^2.4.0"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
pylint = "^2.8.2"
autopep8 = "^1.5.7"
freezegun = "^1.1.0"
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
