[tool.poetry]
name = "Projektinator"
version = "0.1.0"
description = "Course project for Tietokantasovellus-course."
authors = ["Tuomas Alanen <tualanen@cs.helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.1"
bcrypt = "^3.2.0"
markdown2 = "^2.4.0"
psycopg2-binary = "^2.9.3"
invoke = "^1.5.0"
setuptools = "^60.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
autopep8 = "^1.5.7"
freezegun = "^1.1.0"
pytest = "^6.2.4"
coverage = "^5.5"

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
indent_width = 4

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
